--- a/src/Components/TableElement.css
+++ b/src/Components/TableElement.css
@@ -1,51 +1,24 @@
-table{
-    width: 95%;
-    border-collapse: collapse; 
-    background-color: rgb(220,220,220);
-}
-
-.headerRow{
-    border: 2px solid black;
-    border-top: 0px;
-    border-left: 0px;
-    border-right: 0px;
-
-    color:rgba(0, 0, 0, 0.5);
-}
-
 .bolded{
-    color: rgba(0, 0, 0, 1);
+    @apply text-black p-[15px] whitespace-nowrap cursor-pointer;
+}
+.custom-th{
+    @apply text-gray-500 p-[15px] whitespace-nowrap cursor-pointer;
 }
 
-th, td{
-    padding: 15px;
-    white-space: nowrap;
+.data-th{
+    @apply p-[15px] whitespace-nowrap;
 }
 
-.theTable{
-    display: flex;
-    justify-content: center; 
-    align-items: flex-start; 
-    height: 100vh; 
-    margin: 0; 
+.custom-table{
+    @apply w-[95%] border-collapse bg-[rgb(220,220,220)];
 }
 
-.clickable{
-    cursor: pointer; 
-}
-
-@media screen and (max-width: 768px){
-
-    table{
-        width: 70%
+@media (max-width: 768px){
+    .custom-th{
+        @apply p-[5px];
     }
-    th,td{
-        padding: 5px;
-    }
-
-    .theTable{
-        font-size: 9px;
-        padding: 0px;
+    .bolded{
+        @apply p-[5px];
     }
 
 }
